--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <table>
-        <!-- this is the head section of the calculator -->
+        <!-- Display da calculadora -->
         <tr>
             <tr>
                 <td class="heading"> Calculadora Simples </td>
@@ -20,7 +20,7 @@
                 <input type="text" id="answer" readonly="readonly">
             </td>
         </tr>
-        <!-- buttons section of the calculator-->
+        <!-- Números da calculadora -->
         <tr>
             <td>
                 <input type="button" value="CE" onclick="clearScreen()" id="cee">
@@ -48,10 +48,7 @@
                 <input type="button" value="0" onclick="getNumber(0)">
                 <input type="button" value="=" onclick="compute()" id="igual">
             </td>
-            
         </tr>
-
-
     </table>
 </body>
 <script src="index.js"></script>
